feat: add earphones crud

--- a/app.json
+++ b/app.json
@@ -31,6 +31,10 @@
         "projectId": "497b0406-a609-45d0-a2b0-72db2919ea88"
       }
     },
-    "owner": "zannisdf"
-  }
+    "owner": "zannisdf",
+    "plugins": [
+      "expo-router"
+    ]
+  },
+  "scheme": {}
 }
