--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "@supabase/supabase-js": "^2.40.0",
+    "dayjs": "^1.11.11",
     "expo": "~50.0.14",
+    "expo-constants": "~15.4.6",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo-router": "~3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.6"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.17.4",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
